<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorStd"
    android:orientation="vertical"
    tools:context=".activity_timetable">

    <RelativeLayout
        android:id="@+id/mng"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15">

        <TextView
            android:id="@+id/big_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Class 1 - 1"
            android:textColor="#ffffff"
            android:textSize="40sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.12">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4">

                <Spinner
                    android:id="@+id/grade_selector"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/spinner_bnt"
                    android:spinnerMode="dialog">

                </Spinner>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4">

                <Spinner
                    android:id="@+id/semester_selector"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/spinner_bnt"
                    android:spinnerMode="dialog">

                </Spinner>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2">

                <Button
                    android:id="@+id/g_s_complete"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/listrec"
                    android:text="@string/search" />


            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="#9397d0">

        <LinearLayout
            android:id="@+id/back_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/name_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4">

                <TextView
                    android:id="@+id/subjectNameTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/subject"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/bsm_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15">

                <TextView
                    android:id="@+id/subjectBsmTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/bsm"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/plan_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15">

                <TextView
                    android:id="@+id/subjectPlanTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/plan"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/num_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15">

                <TextView
                    android:id="@+id/subjectNumTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/num"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/state_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15">

                <TextView
                    android:id="@+id/subjectStateTv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/state"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/button_layout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.15">

                <TextView
                    android:id="@+id/complete"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/subCheck"
                    android:textSize="15dp"
                    android:textStyle="bold" />

            </RelativeLayout>


        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/number_choice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.55">


        <ListView
            android:id="@+id/tableListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="multipleChoice"
            android:divider="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </ListView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.34">

                <Button
                    android:id="@+id/etc_add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/addbtrec"
                    android:text="@string/sem_add"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33">

                <Button
                    android:id="@+id/subject_add"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/addbtrec"
                    android:text="@string/it_list"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33">

                <Button
                    android:id="@+id/delete_bt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/listrec"
                    android:text="@string/delete"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/menuBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.09"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/symbol"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:src="@drawable/purplesymbol" />

            <ImageButton
                android:id="@+id/home_bnt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/browser" />

            <ImageButton
                android:id="@+id/set_bnt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/human" />

            <ImageButton
                android:id="@+id/fin_bnt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="#FFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/setting" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>