<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorStd"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".NumberChoice">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <ImageView
            android:id = "@+id/logo"
            android:adjustViewBounds="true"
            android:layout_centerInParent="true"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:src="@drawable/whitesymbol"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text = "학번을 선택 해주세요."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


    <!-- 일부 속성 수정 -->
    <RelativeLayout
        android:id="@+id/number_choice"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7">

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/num14"
                android:text="@string/num14"
                android:background="@drawable/selector_pressed"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <!-- layout 크기를 직접 지정해주는 방식은 때에 따라서 다른 해상도와 비율의 기기에서 의도치 않은 뷰를 보여줄 수 있습니다.-->

            <Button
                android:id="@+id/num17"
                android:text="@string/num1516"
                android:background="@drawable/selector_pressed"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/num19"
                android:text="@string/num1718"
                android:background="@drawable/selector_pressed"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"/>

            <Button
                android:id="@+id/num20"
                android:text="@string/num19"
                android:background="@drawable/selector_pressed"
                android:textStyle="bold"
                android:textSize="20sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp" />


            <!--
             TODO: 확인 버튼은 필요 없을듯 합니다.
             학년 버튼을 클릭시 바로 넘어가도록 변경하는게 좋을듯합니다.
            <Button
                android:id="@+id/number_complete"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/number_complete"
                android:textStyle="bold"
                android:textSize="20sp"
                android:background="@drawable/listrec"/>

                -->

        </LinearLayout>



    </RelativeLayout>

</LinearLayout>